--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,16 +2,19 @@ name: Tests
 
 on:
   push:
-    branches: [ master ]
+    - master
   pull_request:
-    branches: [ master ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: [ '3.0', '3.1', '3.2' ]
+        ruby:
+          - '3.0'
+          - '3.1'
+          - '3.2'
+          - '3.3'
     name: Ruby ${{ matrix.ruby }}
     steps:
       - uses: actions/checkout@v4
@@ -22,5 +25,4 @@ jobs:
       - name: Run Tests
         env:
           RUBYOPT: "-W:deprecated"
-        run: |
-          bundle exec rake
+        run: bundle exec rake
