--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,3 +14,7 @@ updates:
       time: "08:30"
       timezone: America/New_York
     open-pull-requests-limit: 10
+    groups:
+      github_actions:
+        patterns:
+          - "*"
