Run tests with --enable-frozen-string-literal
We don't have any violations and I'm able to trigger an error so this is working. We want to run the test suite with this to ensure compatibility.

https://byroot.github.io/ruby/performance/2025/10/28/string-literals.html#conclusion

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Run Tests
         env:
           COVERAGE: true
-          RUBYOPT: "-W:deprecated"
+          RUBYOPT: "-W:deprecated --enable-frozen-string-literal --debug-frozen-string-literal"
         run: bundle exec rake
       - name: Rename coverage file by matrix run
         run: mv coverage/coverage.xml coverage/coverage-ruby-${{ matrix.ruby }}.xml
